changements index.html, style.css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
             <figure>
                 <img src="images/28-ans-d-intro-canape-des-simpson-en-5-minutes-video-649.jpg" alt="">
             </figure>
-        </header>
-        <main>
             <nav>
                 <a href="">Acceuil</a>
                 <a href="">Le Film</a>
@@ -24,7 +22,10 @@
                 <a href="">Histoire</a>
                 <a href="">Matt Groening</a>
             </nav>
-
+           
+        </header>
+        <div class="dashed"></div>
+        <main>
             <article>
                 <h1>Les Simpsons</h1>
                 <p>
@@ -41,21 +42,23 @@
                     recusandae, quisquam maxime numquam ducimus accusantium voluptatum et atque repellendus! Eius
                     numquam in consequuntur dolorum quidem?
                 </p>
-            </article>
-
+                <figure id="grid">
+                    <img src="images/simpson_movie.jpg" alt="photo">
+                    <img src="images/simpson_movie.jpg" alt="photo">
+                    <img src="images/simpson_movie.jpg" alt="photo">
+                </figure>
+            </article> 
             <aside>
                 <figure>
                     <img src="images/Matt_Groening_by_Gage_Skidmore_2.jpg" alt="Matt Groening">
                 </figure>
                 <h2>Matt Groening</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, ducimus minima illum, cumque eligendi
-                    illo
-                    ipsam minus totam, suscipit nisi mollitia officiis quasi nam vitae numquam. Recusandae doloribus ut
-                    veritatis.
-                    Illo, aspernatur soluta. Enim iure quidem, inventore aut reprehenderit eveniet eos vitae. Enim quas
-                    obcaecati rerum error voluptatem, adipisci debitis voluptas repellendus porro repellat aspernatur ea
-                    sequi
-                    quibusdam voluptates eum?
+                <p id="legende">Déssinateur</small></p>
+                <p>
+                    Mathew Abram Groening est un dessinateur,
+                    scénariste et producteur de télévision américain.
+                    Il est le créateur du comic strip Life In Hell et
+                    des séries télévisées d'animation Les Simpsons et Futurama.
                 </p>
             </aside>
         </main>
