changements html, css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <header>
-            <h1>Oooooh Pinaise ! ...</h1>
+            <h1>OOoOoH PINAISE ! ...</h1>
             <figure>
                 <img src="images/28-ans-d-intro-canape-des-simpson-en-5-minutes-video-649.jpg" alt="">
             </figure>
