--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="images/28-ans-d-intro-canape-des-simpson-en-5-minutes-video-649.jpg" alt="">
             </figure>
             <nav>
-                <a href="">Acceuil</a>
+                <a href="">Accueil</a>
                 <a href="">Le Film</a>
                 <a href="">Personnages</a>
                 <a href="">Histoire</a>
